--- a/tabnine/comparing-tabnine-vs-qodo.mdx
+++ b/tabnine/comparing-tabnine-vs-qodo.mdx
@@ -10,7 +10,7 @@ metaDescription: 'Compare Tabnine and Qodo Gen features, pricing, and capabiliti
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Tabnine and Qodo Gen stand out as two prominent solutions in the market. Both tools offer comprehensive AI-powered code assistance, but they differ significantly in their approach to test generation and code review capabilities. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered development tools continue to reshape how we write code, [Tabnine](https://www.tabnine.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both tools offer comprehensive AI-powered code assistance, but they differ significantly in their approach to test generation and code review capabilities. This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'Universal and Custom Models', 'GPT-4, Claude 3.5, Gemini'],
-    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Team $19/mo, Enterprise']
+    ['Pricing', 'Dev $9/mo + Enterprise $30/user/mo', 'Free Developer tier + Teams $19/user/mo + Enterprise custom price']
 ]
 
 ## Code Completion
@@ -67,16 +67,34 @@ Qodo Gen maintains stringent privacy norms with encrypted code snippet transmiss
 ## Pricing
 
 ### Tabnine
-- **Basic Plan**: Entry-level features for individual developers
-- **Dev Plan**: Enhanced features for professional developers
-- **Pro Plan**: Advanced features for power users
-- **Enterprise Plans**:
-  - **SaaS Version**: Cloud-based enterprise solution
-  - **Private Installation**: On-premises deployment with maximum security
+- **Dev Plan**
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
+- **Enterprise Plans**
+  - $39 per user, per month
+  - SaaS and Private Installation options
+  - Full control over infrastructure
+  - Maximum security features
 
 ### Qodo Gen
-- **Free Tier**: Access to basic features for individual developers
-- **Pro Tier**: Enhanced functionality including AI-assisted code completion, targeted at teams and enterprises
+- **Developer Tier**
+  - Free
+  - Access to basic features
+  - Suitable for individual developers
+  - Basic IDE integration
+- **Teams Tier**
+  - $19 per user, per month
+  - Enhanced AI-assisted code completion
+  - Pre-pull request review inside the IDE
+  - Standard support
+- **Enterprise Tier**
+  - Custom pricing
+  - Self-hosted solution
+  - Full organization codebase awareness
+  - Enterprise SSO
+  - Priority support
 
 ## Conclusion
 
