--- a/others/comparing-codeium-vs-qodo.mdx
+++ b/others/comparing-codeium-vs-qodo.mdx
@@ -10,7 +10,7 @@ metaDescription: 'Compare Codeium and Qodo Gen features, pricing, and capabiliti
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Codeium and Qodo Gen stand out as two prominent solutions in the market. Both tools offer comprehensive AI-assisted coding capabilities, but differ significantly in their approach to test generation and code review features. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered development tools continue to reshape how we write code, [Codeium](https://codeium.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both tools offer comprehensive AI-assisted coding capabilities, but differ significantly in their approach to test generation and code review features. This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
       ['JetBrains Support', '✗', '✓'],
       ['NVIM Support', '✗', '✗'],
       ['Models Supported', 'GPT-4o, Claude 3.5', 'GPT-4, Claude 3.5, Gemini'],
-      ['Pricing', 'Free, Pro $15/mo, Ultimate $60/mo', 'Free, Team $19/mo, Enterprise']
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $60/mo', 'Free tier + Teams $19/user/mo + Enterprise custom pricing']
    ]
 
 ## Code Completion
